make the topic more dynamic for topic selection

--- a/essay_writer/agentic_essay_writer.ipynb
+++ b/essay_writer/agentic_essay_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d37aabc1",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,6 @@
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import os\n",
-    "\n",
     "\n",
     "load_dotenv(override=True)\n",
     "\n",
@@ -21,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ab1611a7",
    "metadata": {},
    "outputs": [
@@ -30,23 +29,25 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"Global Warming\": \"The long-term increase in Earth's average temperature, primarily driven by human activities like burning fossil fuels.\",\n",
-      "    \"Extreme Weather Events\": \"Increased frequency and intensity of events like hurricanes, floods, droughts, and wildfires linked to climate change.\",\n",
-      "    \"Sea Level Rise\": \"The gradual increase in sea levels due to melting glaciers and thermal expansion of water, threatening coastal communities.\",\n",
-      "    \"Ocean Acidification\": \"The absorption of excess carbon dioxide by the oceans, leading to a decrease in pH and harming marine life.\",\n",
-      "    \"Biodiversity Loss\": \"Climate change is disrupting ecosystems, leading to habitat loss and the extinction of plant and animal species.\",\n",
-      "    \"Agricultural Impacts\": \"Changes in temperature and precipitation patterns affect crop yields, food security, and agricultural practices.\"\n",
+      "    \"Mars Exploration\": \"Mars is a red planet! Scientists send rovers and rockets to explore Mars to learn about its past and future. They look for water and signs of life.\",\n",
+      "    \"Asteroids and Comets\": \"Asteroids and comets are rocky or icy space objects that orbit the Sun. Some are big and some are small. They can sometimes impact planets!\",\n",
+      "    \"The Moon's Phases\": \"The Moon changes shape throughout the month. This is because the amount of sunlight reflecting off the Moon changes as it orbits Earth.\",\n",
+      "    \"Jupiter's Great Red Spot\": \"Jupiter is a giant planet with a huge storm called the Great Red Spot. It's been raging for hundreds of years and is bigger than Earth!\",\n",
+      "    \"Saturn's Rings\": \"Saturn has beautiful rings made of ice, rock, and dust. They are very bright and impressive to look at from Earth.\",\n",
+      "    \"Venus: The Hottest Planet\": \"Venus is the hottest planet in our solar system. It has a thick atmosphere that traps heat, making it very hot.\"\n",
       "}\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "topic = \"solar system for kids to read\"\n",
+    "\n",
     "workflow_1 = (\n",
     "    \"Provide a dictionary variable named 'climate_change_topics' that contains at least 5 topics \"\n",
-    "    \"about current climate change problems. Each key should be a topic name, and each value should be a short summary. \"\n",
+    "    \"about current {topic}. Each key should be a topic name, and each value should be a short summary. \"\n",
     "    \"Respond with only the Python dictionary — no explanation, no code block, no formatting, just the raw variable.\"\n",
-    ")\n",
+    ").format(topic=topic)\n",
     "\n",
     "\n",
     "messages = [{\"role\": \"user\", \"content\": workflow_1}]\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "795e168e",
    "metadata": {},
    "outputs": [
@@ -72,40 +73,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 1: Global Warming\n",
-      "Summary: The long-term increase in Earth's average temperature, primarily driven by human activities like burning fossil fuels.\n",
+      "Topic 1: Mars Exploration\n",
+      "Summary: Mars is a red planet! Scientists send rovers and rockets to explore Mars to learn about its past and future. They look for water and signs of life.\n",
       "\n",
-      "Topic 2: Extreme Weather Events\n",
-      "Summary: Increased frequency and intensity of events like hurricanes, floods, droughts, and wildfires linked to climate change.\n",
+      "Topic 2: Asteroids and Comets\n",
+      "Summary: Asteroids and comets are rocky or icy space objects that orbit the Sun. Some are big and some are small. They can sometimes impact planets!\n",
       "\n",
-      "Topic 3: Sea Level Rise\n",
-      "Summary: The gradual increase in sea levels due to melting glaciers and thermal expansion of water, threatening coastal communities.\n",
+      "Topic 3: The Moon's Phases\n",
+      "Summary: The Moon changes shape throughout the month. This is because the amount of sunlight reflecting off the Moon changes as it orbits Earth.\n",
       "\n",
-      "Topic 4: Ocean Acidification\n",
-      "Summary: The absorption of excess carbon dioxide by the oceans, leading to a decrease in pH and harming marine life.\n",
+      "Topic 4: Jupiter's Great Red Spot\n",
+      "Summary: Jupiter is a giant planet with a huge storm called the Great Red Spot. It's been raging for hundreds of years and is bigger than Earth!\n",
       "\n",
-      "Topic 5: Biodiversity Loss\n",
-      "Summary: Climate change is disrupting ecosystems, leading to habitat loss and the extinction of plant and animal species.\n",
+      "Topic 5: Saturn's Rings\n",
+      "Summary: Saturn has beautiful rings made of ice, rock, and dust. They are very bright and impressive to look at from Earth.\n",
       "\n",
-      "Topic 6: Agricultural Impacts\n",
-      "Summary: Changes in temperature and precipitation patterns affect crop yields, food security, and agricultural practices.\n",
+      "Topic 6: Venus: The Hottest Planet\n",
+      "Summary: Venus is the hottest planet in our solar system. It has a thick atmosphere that traps heat, making it very hot.\n",
       "\n",
-      "Sea Level Rise\n",
-      "The gradual increase in sea levels due to melting glaciers and thermal expansion of water, threatening coastal communities.\n",
+      "Jupiter's Great Red Spot\n",
+      "Jupiter is a giant planet with a huge storm called the Great Red Spot. It's been raging for hundreds of years and is bigger than Earth!\n",
       "\n",
       " Generated Essay:\n",
       "\n",
-      "## The Rising Tide: Understanding the Threat of Sea Level Rise\n",
+      "## The Colossal Eye of Jupiter: Unveiling the Great Red Spot\n",
       "\n",
-      "One of the most pressing environmental challenges of our time is the escalating issue of sea level rise. This isn't a distant threat; its impacts are already being felt globally, and the consequences are projected to worsen dramatically in the coming decades. Driven by complex factors, including the melting of glaciers and the thermal expansion of water, sea level rise presents a significant and multifaceted threat to coastal communities worldwide.\n",
+      "Jupiter, the solar system’s largest planet, is a marvel of swirling gases and colossal power. Among its many captivating features, the Great Red Spot stands out as an iconic symbol of the gas giant’s turbulent atmosphere. This persistent storm, a swirling vortex of wind, has been raging on Jupiter for at least 350 years, making it one of the most enduring and fascinating phenomena in the cosmos. \n",
       "\n",
-      "The primary contributor to this rise is the warming planet. As global temperatures increase, glaciers and ice sheets are melting at an alarming rate, releasing vast quantities of freshwater into the oceans. Simultaneously, as ocean water warms, it expands, taking up more volume. This combination of factors is causing the sea level to steadily climb.\n",
+      "The Great Red Spot isn't a simple cloud formation; it’s a powerful, anticyclonic storm roughly twice the size of Earth.  Scientists believe it originated centuries ago and has remained remarkably stable, a testament to the immense forces powering its evolution. While its exact cause remains under investigation, it is likely a result of complex interactions within Jupiter’s atmosphere.  Strong winds and powerful jet streams contribute to its persistent rotation and maintain its distinct red hue, likely caused by chemical reactions involving ammonia and phosphine. \n",
       "\n",
-      "The consequences of this rise are far-reaching and devastating. Coastal communities, many of which are densely populated and economically vital, face increased risks of flooding, erosion, and saltwater intrusion. Low-lying islands and coastal cities are particularly vulnerable, threatened by permanent inundation.  Infrastructure, including roads, power plants, and water treatment facilities, is at risk of damage and disruption. \n",
-      "\n",
-      "Beyond the immediate physical impacts, sea level rise exacerbates existing vulnerabilities.  It weakens natural defenses like mangroves and coral reefs, which traditionally buffer coastlines from storm surges.  Increased flooding also leads to displacement of populations, straining resources and potentially triggering conflicts. \n",
-      "\n",
-      "Addressing sea level rise requires a multi-pronged approach.  Mitigating climate change through reducing greenhouse gas emissions is paramount.  In addition, adaptation strategies like building seawalls, restoring coastal wetlands, and relocating vulnerable communities are crucial to managing the unavoidable consequences. Failure to act decisively will leave coastal populations facing an increasingly precarious future, highlighting the urgency of global cooperation and sustainable practices.\n",
+      "The visual spectacle of the Great Red Spot has captivated astronomers and the public alike.  Observations from telescopes dating back to the 17th century have documented its existence, leading to its moniker.  As we continue to explore deeper into the solar system, the Great Red Spot offers invaluable insights into the dynamics of gas giants and the powerful forces that shape planetary atmospheres. Studying this storm provides scientists with a crucial window into understanding weather patterns on worlds vastly different from our own, and perhaps even hints at the potential for similar phenomena elsewhere in the universe.  The Great Red Spot remains a constant reminder of the chaotic beauty and immense power found in the vast expanse of space.\n",
       "\n",
       "\n",
       "\n",
