update for essay writer

--- a/essay_writer/agentic_essay_writer.ipynb
+++ b/essay_writer/agentic_essay_writer.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ab1611a7",
    "metadata": {},
    "outputs": [
@@ -29,12 +29,12 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"Mars Exploration\": \"Mars is a red planet! Scientists send rovers and rockets to explore Mars to learn about its past and future. They look for water and signs of life.\",\n",
-      "    \"Asteroids and Comets\": \"Asteroids and comets are rocky or icy space objects that orbit the Sun. Some are big and some are small. They can sometimes impact planets!\",\n",
-      "    \"The Moon's Phases\": \"The Moon changes shape throughout the month. This is because the amount of sunlight reflecting off the Moon changes as it orbits Earth.\",\n",
-      "    \"Jupiter's Great Red Spot\": \"Jupiter is a giant planet with a huge storm called the Great Red Spot. It's been raging for hundreds of years and is bigger than Earth!\",\n",
-      "    \"Saturn's Rings\": \"Saturn has beautiful rings made of ice, rock, and dust. They are very bright and impressive to look at from Earth.\",\n",
-      "    \"Venus: The Hottest Planet\": \"Venus is the hottest planet in our solar system. It has a thick atmosphere that traps heat, making it very hot.\"\n",
+      "    \"The Sun's Energy\": \"The Sun is a giant ball of hot gas that gives us light and warmth! It's like a giant light bulb in space, and it's super important for life on Earth.\",\n",
+      "    \"Mars: The Red Planet\": \"Mars is a rocky planet that's red because of iron in its soil. Scientists are looking for signs of past life on Mars!\",\n",
+      "    \"Jupiter: The Giant Planet\": \"Jupiter is the largest planet in our solar system! It has a big red spot, which is a giant storm that's been raging for hundreds of years.\",\n",
+      "    \"Saturn's Rings\": \"Saturn is famous for its beautiful rings, which are made of billions of ice and rock pieces. They sparkle in the sunlight!\",\n",
+      "    \"The Moon: Earth's Friend\": \"The Moon is Earth's only natural satellite. It orbits Earth and has craters, which are formed by impacts from space rocks.\",\n",
+      "    \"Asteroids and Comets\": \"Asteroids are rocky leftovers from the formation of our solar system. Comets are icy balls that travel through space and sometimes have tails when they get close to the Sun.\"\n",
       "}\n",
       "\n"
      ]
