adding guardrails to agent

--- a/2_OpenAi/Sales_Agent/2_Sales_Agents_with_SendGrid.ipynb
+++ b/2_OpenAi/Sales_Agent/2_Sales_Agents_with_SendGrid.ipynb
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "3397201a",
    "metadata": {},
    "outputs": [
@@ -601,8 +601,8 @@
     "\n",
     "message = \"Send a cold sales email addressed to 'Dear CEO'\"\n",
     "\n",
-    "with trace(\"Sales manager\"):\n",
-    "    result = await Runner.run(sales_manager, message)"
+    "# with trace(\"Sales manager\"):\n",
+    "#     result = await Runner.run(sales_manager, message)"
    ]
   },
   {
@@ -774,8 +774,10 @@
     "\n",
     "message = \"Send out a cold sales email addressed to Dear CEO from Alice\"\n",
     "\n",
-    "with trace(\"Automated SDR\"):\n",
-    "    result = await Runner.run(sales_manager, message)"
+    "result = await Runner.run(sales_manager, message)\n",
+    "\n",
+    "# with trace(\"Automated SDR\"):\n",
+    "#     result = await Runner.run(sales_manager, message)"
    ]
   }
  ],
