langgraph with memory management

--- a/1_Foundation/Professionally you/professionally_you.ipynb
+++ b/1_Foundation/Professionally you/professionally_you.ipynb
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "746a4678",
    "metadata": {},
    "outputs": [],
    "source": [
     "pushover_user = os.getenv(\"PUSHOVER_USER\")\n",
     "pushover_token = os.getenv(\"PUSHOVER_TOKEN\")\n",
-    "pushover_url = \"https://api.pushover.net/1/messages.json\""
+    "pushover_url = os.getenv(\"PUSHOVER_URL\")"
    ]
   },
   {
